--- a/.github/workflows/c-build.yml
+++ b/.github/workflows/c-build.yml
@@ -14,5 +14,5 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       
-    - name: make all
-      run:  make all -C project/
+    - name: make 
+      run:  make 
